--- a/index.html
+++ b/index.html
@@ -76,32 +76,32 @@
 						<div class="products-item item">
 							<img src="img/cakes/6.JPG" alt="Item" class="w-100">
 							<h3>Прага</h3>
-							<p>Состав: мука пшеничная в/с, яйца куриные, сахар-песок, масло сливочное 82,5%(высокожирные пастеризованные сливки),  сгущенное молоко вареное(молоко нормализованное, сливочное масло, сахар-песок, загуститель), кондитерский темный шоколад, начинка термостабильная «вишня»</p>
+							<p>Состав: мука пшеничная в/с, яйцо , сахар, масло сливочное, яйцо желтки, темный шоколад, вишневая начинка</p>
 						</div>
 						<div class="products-item item">
 							<img src="img/cakes/5.jpg" alt="Item" class="w-100">
 							<h3>Наполеон</h3>
-							<p>Состав: мука пшеничная в/с, яйцо куриное, маргарин (жиры растительные, эмульгатор Е471, краситель пищевой Е160, ароматизатор), сахар, соль, вода питьевая, сливочное масло 82,5%(высокожирные пастеризованные сливки), сахарная пудра, ароматизатор (ванилин), сгущенное молоко (молоко нормализованное, сахар-песок), крем сливочный ультрапастеризованный «сливки для взбивания 35%»</p>
+							<p>Состав: слоенное тесто, заварной крем</p>
 						</div>
 						<div class="products-item item">
 							<img src="img/cakes/7.JPG" alt="Item" class="w-100">
 							<h3>Птичье молоко</h3>
-							<p>Состав: мука пшеничная в/с, яйца куриные, сахар-песок, масло сливочное 82,5%(высокожирные пастеризованные сливки),  сгущенное молоко (молоко нормализованное, сахар-песок), агар-агар, патока крахмальная карамельная G40.1, яичный белок, кондитерский темный шоколад</p>
+							<p>Состав: мука пшеничная в/с, яйцо, сахар, масло сливочное, сгущенное молоко, агар-агар, патока карамельная, яйцо белок, темный шоколад / черная смородина, белый шоколад</p>
 						</div>
 						<div class="products-item item">
 							<img src="img/cakes/9.JPG" alt="Item" class="w-100">
 							<h3>Трюфель</h3>
-							<p>Состав: мука пшеничная в/с, яйцо куриное, маргарин (жиры растительные, эмульгатор Е471, краситель пищевой Е160, ароматизатор), сахар, соль, сливочное масло 82,5%(высокожирные пастеризованные сливки), сахарная пудра, ароматизатор (ванилин), сгущенное молоко (молоко нормализованное, сахар-песок), какао-порошок, кондитерский темный шоколад, начинка термостабильная «вишня», заварной крем, грецкий орех</p>
+							<p>Состав: мука пшеничная в/с, яйцо, сахар, сливочное масло, сахарная пудра, ванилин, какао-порошок, сгущенное молоко, темный шоколад, фруктовая прослойка – вишня, грецкий орех</p>
 						</div>
 						<div class="products-item item">
 							<img src="img/cakes/11.JPG" alt="Item" class="w-100">
 							<h3>Эстерхази</h3>
-							<p>Состав: миндальная мука, яичные белки, сахар-песок, заварной крем, сливочное масло 82,5%(высокожирные пастеризованные сливки), арахисовая паста, шоколад кондитерский белый, шоколад кондитерский темный</p>
+							<p>Состав: миндальная мука, яйцо белок, сахар, заварной крем, арахисовая паста, корица, сливочное масло, шоколад, белый, шоколад темный</p>
 						</div>
 						<div class="products-item item">
 							<img src="img/cakes/2.JPG" alt="Item" class="w-100">
 							<h3>Бисквитно-кремовое пироженое</h3>
-							<p>Состав: мука пшеничная в/с, яйцо куриное, сахар, сливочное масло 82,5%(высокожирные пастеризованные сливки), сахарная пудра, ароматизатор (ванилин), сгущенное молоко (молоко нормализованное, сахар-песок), кондитерский белый шоколад, термостабильная начинка «абрикос», заварной крем</p>
+							<p>Состав: мука пшеничная в/с, яйцо, сахар, сливочное масло, сахарная пудра, сгущенное молоко, заварной крем, белый шоколад, фруктовая прослойка - абрикос</p>
 						</div>
 					</div>
 					<a href="products.html" class="btn">
