--- a/products.html
+++ b/products.html
@@ -334,6 +334,12 @@
 									<p>Состав: мука пшеничная в/с, яйцо, сахар, сливочное масло, сгущённое молоко,  заварной крем (чешский рулет - шоколадный бисквит, шоколадный крем; театральный - шоколадный бисквит, ванильный крем)</p>
 									<span>65₽</span>
 								</div>
+								<div class="products-item item">
+									<img src="img/rolls/4.JPG" alt="Item" class="w-100">
+									<h3>Рулет малиновый</h3>
+									<p>Состав: мука пшеничная в/с, яйцо куриное, сахар, сливочное масло, заварной крем, сгущенное молоко, кондитерский белый шоколад, малина свежемороженная</p>
+									<span>65₽</span>
+								</div>
 							</div>
 						</div>
 						<div class="slider-item pies-2">
