--- a/products.html
+++ b/products.html
@@ -208,6 +208,9 @@
 											<span>Малина</span>
 										</div>
 										<div class="product-item">
+											<span class="clr">470г</span>
+										</div>
+										<div class="product-item">
 											<span class="clr">210₽</span>
 										</div>
 									</div>
@@ -220,12 +223,14 @@
 									<img src="img/cakes/1.JPG" alt="Item" class="w-100">
 									<h3>Безе</h3>
 									<p>Состав: яичный белок, сахар, ванилин, лимон</p>
+									<span class="d-block">140г</span>
 									<span>150₽</span>
 								</div>
 								<div class="products-item item">
 									<img src="img/cakes/15.JPG" alt="Item" class="w-100">
 									<h3>Безе цветное / на палочке</h3>
 									<p>Состав: яичный белок, сахар, ароматизатор-сироп «клубника», пищевые красители</p>
+									<span class="d-block">140г</span>
 									<span>215₽ / 50₽</span>
 								</div>
 								<div class="products-item item">
@@ -378,6 +383,9 @@
 											<span>Клубника</span>
 										</div>
 										<div class="product-item">
+											<span class="clr">0,5кг</span>
+										</div>
+										<div class="product-item">
 											<span class="clr">185₽</span>
 										</div>
 									</div>
@@ -410,6 +418,9 @@
 										</div>
 										<div class="product-item">
 											<span>Рыба с рисом - филе горбушки</span>
+										</div>
+										<div class="product-item">
+											<span class="clr">0,5кг</span>
 										</div>
 										<div class="product-item">
 											<span class="clr">210₽</span>
