--- a/products.html
+++ b/products.html
@@ -339,6 +339,8 @@
 									<p>Состав: мука пшеничная в/с, яйцо, сахар, сливочное масло, сгущённое молоко,  заварной крем (чешский рулет - шоколадный бисквит, шоколадный крем; театральный - шоколадный бисквит, ванильный крем)</p>
 									<span>65₽</span>
 								</div>
+							</div>
+							<div class="items items-value-2">
 								<div class="products-item item">
 									<img src="img/rolls/4.JPG" alt="Item" class="w-100">
 									<h3>Рулет малиновый</h3>
