--- a/products.html
+++ b/products.html
@@ -227,7 +227,7 @@
 									<span>150₽</span>
 								</div>
 								<div class="products-item item">
-									<img src="img/cakes/15.JPG" alt="Item" class="w-100">
+									<img src="img/cakes/15.jpg" alt="Item" class="w-100">
 									<h3>Безе цветное / на палочке</h3>
 									<p>Состав: яичный белок, сахар, ароматизатор-сироп «клубника», пищевые красители</p>
 									<span class="d-block">140г</span>
@@ -294,7 +294,7 @@
 									<span>120₽</span>
 								</div>
 								<div class="products-item item">
-									<img src="img/cakes/12.JPG" alt="Item" class="w-100">
+									<img src="img/cakes/12.jpg" alt="Item" class="w-100">
 									<h3>Эклер</h3>
 									<p>Состав: заварное тесто, заварной крем, шоколадная глазурь</p>
 									<span>55₽</span>
@@ -308,13 +308,13 @@
 									<span>90₽</span>
 								</div>
 								<div class="products-item item">
-									<img src="img/cakes/13.JPG" alt="Item" class="w-100">
+									<img src="img/cakes/13.jpg" alt="Item" class="w-100">
 									<h3>Чизкейк мраморный (шоколадный/малиновый)</h3>
 									<p>Состав: сливочный сыр Creametta, сливки 35%, сахар, желатин, мука пшеничная в/с, яйцо, сахар</p>
 									<span>120₽</span>
 								</div>
 								<div class="products-item item">
-									<img src="img/cakes/14.JPG" alt="Item" class="w-100">
+									<img src="img/cakes/14.jpg" alt="Item" class="w-100">
 									<h3>Картошка</h3>
 									<p>Состав: бисквит, сливочное масло, какао-порошок, ароматизатор ром, коньяк, шоколадная глазурь</p>
 									<span>50₽</span>
@@ -322,7 +322,7 @@
 							</div>
 							<div class="items">
 								<div class="products-item item">
-									<img src="img/cakes/16.JPG" alt="Item" class="w-100">
+									<img src="img/cakes/16.jpg" alt="Item" class="w-100">
 									<h3>Кольцо с творогом</h3>
 									<p>Состав: заварное тесто, творог 18%, сахар, ванилин, сахарная пудра</p>
 									<span>50₽</span>
