--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 						<a href="#products-mob" class="a-mob">Каталог</a>
 					</li>
 					<li>
+						<a href="#delivery">Доставка</a>
+					</li>
+					<li>
 						<a href="#testimotials" class="a-desk">Отзывы</a>
 					</li>
 					<li>
@@ -46,28 +49,17 @@
 		</header>
 		<main id="home">
 			<div class="main-slider">
-				<div>
-					<img src="img/slide-1.jpg" alt="Slide" class="w-100">
-					<div class="notes w-100">
-						<h3>Не пропустите! Спец. предложение 1!</h3>
-						<p>Напишите здесь что нибудь...</p>
+				<a href="#delivery">
+					<div>
+						<img src="img/delivery.jpg" alt="Slide" class="w-100">
 					</div>
-				</div>
-				<div>
-					<img src="img/slide-2.jpg" alt="Slide" class="w-100">
-					<div class="notes w-100">
-						<h3>Не пропустите! Спец. предложение 2!</h3>
-						<p>Напишите здесь что нибудь...</p>
-					</div>
-				</div>
-				<div>
-					<img src="img/slide-3.jpg" alt="Slide" class="w-100">
-					<div class="notes w-100">
-						<h3>Не пропустите! Спец. предложение 3!</h3>
-						<p>Напишите здесь что нибудь...</p>
-					</div>
-				</div>
+				</a>
 			</div>
+			<a href="#delivery">
+				<div class="notes w-100">
+					<h3>Вы на самоизоляции? Тогда мы едем к Вам!</h3>
+				</div>
+			</a>
 			<div class="products desk block" id="products">
 				<h2 class="section-title">Хиты продаж</h2>
 				<hr>
@@ -178,6 +170,17 @@
 					</div>
 				</div>
 			</div> -->
+			<div class="delivery desk block" id="delivery">
+				<h2 class="section-title">Доставка</h2>
+				<hr>
+				<div class="wrapper">
+					<div class="delivery-items items d-block">
+						<div class="delivery-item item">
+							<p>Мы все сейчас находимся в определенной новой реальности, в которой всё меньше остаётся места шаблонным решениям и привычным, обыденным вещам.  Кажется, ещё совсем недавно мы готовы были пригласить всех наших друзей на чашечку кофе со свежим пирожным или выпечкой в нашу новую пекарню-кондитерскую у метро Беляево, как жизнь внесла свои коррективы.  Но мы очень любим всех вас, наши покупатели, и не готовы к расставанию с вами. Мы научились идти в ногу со временем и умеем преодолевать трудности.   МЫ ИДЕМ К ВАМ!!! Ежедневно с 10.00 до  22.00 мы готовы принять Ваш заказ и доставить его до дверей Вашего дома. И как всегда, мы предлагаем вкуснейшие и свежайшие десерты, выпечку, пироги, пирожки. Ждём ваши заказы по телефону +7-999-599-0155.  Мы всегда рядом и готовы поддержать вас в это  непростое время. И заходите к нам в минуты прогулок, а мы вам кофейку нальём:) Пекарня-кондитерская находится в Беляево на ул. Введенского 24-б, а магазин - в Черёмушках на ул. Новаторов 40, стр. 16.</p>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div class="testimotials desk block" id="testimotials">
 				<h2 class="section-title">Отзывы</h2>
 				<hr>
