--- a/products.html
+++ b/products.html
@@ -25,10 +25,16 @@
 				<a href="#" class="menu-trigger">&#9776;</a>
 				<ul>
 					<li>
-						<a href="#home">Каталог</a>
+						<a href="#home" class="a-desk">Каталог</a>
 					</li>
 					<li>
-						<a href="index.html#testimotials">Отзывы</a>
+						<a href="index.html#delivery">Доставка</a>
+					</li>
+					<li>
+						<a href="index.html#testimotials" class="a-desk">Отзывы</a>
+					</li>
+					<li>
+						<a href="index.html#testimotials-mob" class="a-mob">Отзывы</a>
 					</li>
 					<li>
 						<a href="index.html#contacts">Контакты</a>
