--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 					</div>
 				</div>
 			</div> -->
-			<div class="delivery desk block" id="delivery">
+			<div class="delivery block" id="delivery">
 				<h2 class="section-title">Доставка</h2>
 				<hr>
 				<div class="wrapper">
